# tictactoeMCTS

./: .gitignore  README.md  analyze_losses.py  board.py  bot_vs_random_games_readable.txt  evaluate_vs_random.py  game.py  interactive.py  mcts.py  mcts_player.py  neural_network.py  play_cli.py  player.py  requirements.txt  setup.sh  simulate_games.py  test_model.py  training.py  visualize_training.py
cpp/: CMakeLists.txt  README.md
cpp/include/: common.hpp
cpp/include/game/: tictactoe.hpp
cpp/include/mcts/: node.hpp  search.hpp
cpp/include/nn/: predictor.hpp  python_callback_predictor.hpp
cpp/include/selfplay/: batch_generator.hpp  game.hpp
cpp/src/: bindings.cpp
cpp/src/game/: tictactoe.cpp
cpp/src/mcts/: node.cpp  search.cpp
cpp/src/nn/: predictor.cpp  python_callback_predictor.cpp
cpp/src/selfplay/: batch_generator.cpp  game.cpp
docs/: CLOUD_TRAINING.md  LOSS_ANALYSIS_README.md
scripts/: cloud_training_setup.sh  run_tests.sh
src/: __init__.py  augmentation.py  config.py  dataset.py  evaluate_model.py  game.py  mcts.py  model.py  play_human_vs_bot.py  play_human_vs_human.py  retrain.py  selfplay.py  test_bot_vs_bot.py  test_mcts_vs_adjacent.py  test_vs_random.py  track_progress.py  train.py  train.sh  value_policy_function.py  visualize_training.py
src/env/: __init__.py  game_env.py
src/eval/: __init__.py  agents.py
src/mcts/: __init__.py
src/net/: __init__.py  inference.py
src/players/: random_player.py
src/test_output/: bot_vs_random_games_readable.txt  mcts_vs_adjacent_games_readable.txt
tests/: test_game_env.py
(+13 files in other folders)
